# TripLink

./: .gitignore  LICENSE  README.md  pytest.ini
Backend/: .gitignore  CustomHttpException.py  CustomJWTRequired.py  FetchCities.py  app.py  pyproject.toml
Backend/blueprints/: Bookings.py  ChatService.py  Cities.py  DriverAccess.py  Reviews.py  RideOfferStatuses.py  Rides.py  UserProfile.py  UserRoles.py  driver_access.py  userAccess.py
Backend/models/: Booking.py  Driver.py  Review.py  RideOffer.py  User.py  enums.py
Backend/static/js/: create_ride.js  search_results.js  search_rides.js
Backend/templates/: becomeDriver.html  chat.html  dashboard.html  login.html  profile.html  register.html
Backend/templates/bookings/: accepted_driver_bookings.html  incoming_bookings.html  my_bookings.html
Backend/templates/commons/: base.html
Backend/templates/reviews/: my_reviews.html  search_passengers.html  user_reviews.html
Backend/templates/rides/: all_rides.html  create.html  incoming_bookings.html  my_bookings.html  results.html  search.html
Backend/tests/: conftest.py  test_become_driver.py  test_rides.py  test_user_access.py  tests_rides.py
docker/: README.md  docker-compose.yml
